@@ -24,6 +24,11 @@ Version 4.6.1  [ (under development) ]
             - Two new constructors to compute the homology of a chain complex
               with integer or mod-p coefficients.  Thanks to Ryan Budney.
         Class NAngleStructureList:
+            - There is now an option to enumerate only taut angle structures,
+              which is significantly faster than enumerating all vertex angle
+              structures.  As a result, enumerate() now takes three arguments,
+              there is a new routine isTautOnly(), and the data file format
+              for angle structure lists contains a new element "angleparams".
             - Renamed allowsStrict() and allowsTaut() to spansStrict() and
               spansTaut().  The old routines are now deprecated but have been
               preserved (for now) for backward compatibility.
